generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "sqlite"
  url      = "file:./dev.db"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

model Employee {
  id    Int    @id @default(autoincrement())
  name  String
  rules String @default("*")
  day   Day[]
}

model Day {
  id         String   @id @default(cuid())
  name       String
  employee   Employee @relation(fields: [employeeId], references: [id])
  employeeId Int
  week       Week     @relation(fields: [weekId], references: [id])
  weekId     String
}

model Week {
  id      String @id @default(cuid())
  week    Int
  lunch   Lunch  @relation(fields: [lunchId], references: [id])
  lunchId String
  day     Day[]
}

model Lunch {
  id   String @id @default(cuid())
  week Week[]
}
